# templar

./: .gitignore  LICENSE  README.md  pyproject.toml
src/templar/: __init__.py  evaluator.py  parser.py
