[project]
name = "replacer"
version = "0.1.0"
description = "Replaces all instances of --keyword-- with given values"
readme = "README.md"
authors = [
    { name = "pitt0", email = "pitto.developer@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
