[project]
name = "templar"
version = "0.1.0"
description = "Templar is a template renderer. Takes in input any kind of template with keywords surrounded by double dashes and resolves them with a dict of values."
readme = "README.md"
authors = [
    { name = "pitt0", email = "pitto.developer@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"
